--- a/public/index.html
+++ b/public/index.html
@@ -1,126 +1,186 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <title>Room Booking App</title>
+  <meta charset="UTF-8" />
+  <title>Book a Space</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; background: #f8f9fa; color: #333; }
-    .card { background: #fff; padding: 1.5rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); max-width: 500px; margin-bottom: 2rem; }
-    h2 { margin-top: 0; }
-    label { display: block; margin-top: 0.5rem; font-weight: bold; }
-    input, select { padding: 0.4rem; margin-top: 0.25rem; width: 100%; box-sizing: border-box; }
-    button { margin-top: 1rem; padding: 0.5rem 1rem; background: #007bff; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
-    button:hover { background: #0056b3; }
-    table { width: 100%; border-collapse: collapse; margin-top: 2rem; }
-    th, td { border: 1px solid #ddd; padding: 0.5rem; text-align: left; }
-    th { background: #e9ecef; }
-    #message { margin-top: 0.5rem; font-weight: bold; }
-    .success { color: green; }
-    .error { color: red; }
+    body { font-family: Arial, sans-serif; margin: 2rem; background:#f8f9fa; color:#333; }
+    .card { background:#fff; padding:1.5rem; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); max-width:640px; margin-bottom:2rem; }
+    h2 { margin-top:0; }
+    label { display:block; margin-top:0.5rem; font-weight:bold; }
+    input, select { width:100%; padding:0.4rem; margin-top:0.25rem; box-sizing:border-box; }
+    button { margin-top:1rem; padding:0.5rem 1rem; border:0; border-radius:4px; background:#007bff; color:#fff; cursor:pointer; }
+    button:hover { background:#0056b3; }
+    table { width:100%; border-collapse:collapse; margin-top:1rem; }
+    th, td { border:1px solid #ddd; padding:0.5rem; text-align:left; }
+    th { background:#e9ecef; }
+    .row { display:flex; gap:1rem; }
+    .row > div { flex:1; }
+    .filters { display:flex; gap:0.75rem; align-items:end; margin-bottom:0.5rem; }
+    .success { color:green; margin-top:0.5rem; }
+    .error { color:red; margin-top:0.5rem; }
+    .topbar { display:flex; align-items:center; justify-content:space-between; margin-bottom:1rem; }
+    .link { color:#007bff; text-decoration:none; }
+    .link:hover { text-decoration:underline; }
   </style>
 </head>
 <body>
-  <div class='card'>
-    <h2>Book a Room</h2>
-    <div id='booking-form'>
-      <label for='name'>Full Name:</label>
-      <input type='text' id='name' />
-      <label for='email'>Email:</label>
-      <input type='email' id='email' />
-      <label for='room-select'>Room:</label>
-      <select id='room-select'></select>
-      <label for='date'>Date:</label>
-      <input type='date' id='date' />
-      <label for='start-time'>Start Time:</label>
-      <input type='time' id='start-time' />
-      <label for='end-time'>End Time:</label>
-      <input type='time' id='end-time' />
-      <button id='book-btn'>Book</button>
-      <div id='message'></div>
-    </div>
+  <div class="topbar">
+    <h2>Room & Desk Booking</h2>
+    <a class="link" href="/admin" target="_blank">Admin portal →</a>
   </div>
-  <h3>Existing Bookings</h3>
-  <table id='bookings-table'>
-    <thead>
-      <tr>
-        <th>Room</th>
-        <th>Date</th>
-        <th>Start</th>
-        <th>End</th>
-        <th>Name</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <script>
-    const roomLookup = {};
-    async function loadRooms() {
-      const res = await fetch('/api/rooms');
-      const rooms = await res.json();
-      const select = document.getElementById('room-select');
-      rooms.forEach(room => {
-        roomLookup[room.id] = room;
-        const option = document.createElement('option');
-        option.value = room.id;
-        option.textContent = `${room.name} (${room.type})`;
-        select.appendChild(option);
-      });
-    }
-    async function loadBookings() {
-      const res = await fetch('/api/bookings');
-      const bookings = await res.json();
-      const tbody = document.querySelector('#bookings-table tbody');
-      tbody.innerHTML = '';
-      bookings.forEach(b => {
-        const room = roomLookup[b.room_id] || { name: b.room_id };
-        const startDate = new Date(b.start);
-        const endDate = new Date(b.end);
-        const tr = document.createElement('tr');
-        tr.innerHTML = `<td>${room.name}</td><td>${startDate.toLocaleDateString()}</td><td>${startDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}</td><td>${endDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}</td><td>${b.name || ''}</td><td>${b.email || ''}</td>`;
-        tbody.appendChild(tr);
-      });
-    }
-    async function handleBooking() {
-      const name = document.getElementById('name').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const roomId = parseInt(document.getElementById('room-select').value);
-      const date = document.getElementById('date').value;
-      const start = document.getElementById('start-time').value;
-      const end = document.getElementById('end-time').value;
-      const msgDiv = document.getElementById('message');
-      msgDiv.textContent = '';
-      msgDiv.className = '';
-      if (!name || !email || !date || !start || !end) {
-        msgDiv.textContent = 'Please fill out all fields.';
-        msgDiv.className = 'error';
-        return;
-      }
-      try {
-        const res = await fetch('/api/bookings', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ room_id: roomId, date: date, start_time: start, end_time: end, name: name, email: email })
-        });
-        if (res.status === 200) {
-          msgDiv.textContent = 'Booking successful!';
-          msgDiv.className = 'success';
-          await loadBookings();
-        } else if (res.status === 409) {
-          msgDiv.textContent = 'That time slot is already booked.';
-          msgDiv.className = 'error';
-        } else {
-          const text = await res.text();
-          msgDiv.textContent = text || 'Booking failed.';
-          msgDiv.className = 'error';
-        }
-      } catch (err) {
-        msgDiv.textContent = 'Error submitting booking.';
-        msgDiv.className = 'error';
+
+  <div class="card">
+    <h3>Book a space</h3>
+    <label>Full name</label>
+    <input id="name" type="text" />
+
+    <label>Email</label>
+    <input id="email" type="email" />
+
+    <label>Space</label>
+    <select id="room-select"></select>
+
+    <div class="row">
+      <div>
+        <label>Date</label>
+        <input id="date" type="date" />
+      </div>
+      <div>
+        <label>Start time</label>
+        <input id="start-time" list="times" type="time" />
+      </div>
+      <div>
+        <label>End time</label>
+        <input id="end-time" list="times" type="time" />
+      </div>
+    </div>
+
+    <!-- “Clock-like” 15-min increments -->
+    <datalist id="times"></datalist>
+
+    <button id="book-btn">Book</button>
+    <div id="message"></div>
+  </div>
+
+  <div class="card">
+    <h3>Existing bookings</h3>
+    <div class="filters">
+      <div>
+        <label>Filter by date</label>
+        <input id="filter-date" type="date" />
+      </div>
+      <div>
+        <label>Filter by space</label>
+        <select id="filter-room"><option value="">All</option></select>
+      </div>
+      <button id="apply-filters">Apply</button>
+      <button id="clear-filters" type="button">Clear</button>
+    </div>
+
+    <table id="bookings-table">
+      <thead>
+        <tr>
+          <th>Space</th><th>Date</th><th>Start</th><th>End</th><th>Name</th><th>Email</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+<script>
+  const roomLookup = {};
+
+  function fillTimeDatalist() {
+    const dl = document.getElementById('times');
+    dl.innerHTML = '';
+    for (let h = 0; h < 24; h++) {
+      for (let m = 0; m < 60; m += 15) {
+        const hh = String(h).padStart(2,'0');
+        const mm = String(m).padStart(2,'0');
+        const opt = document.createElement('option');
+        opt.value = `${hh}:${mm}`;
+        dl.appendChild(opt);
       }
     }
-    document.getElementById('book-btn').addEventListener('click', handleBooking);
-    loadRooms().then(loadBookings);
-  </script>
+  }
+
+  async function loadRooms() {
+    const res = await fetch('/api/rooms');
+    const rooms = await res.json();
+    const select = document.getElementById('room-select');
+    const filter = document.getElementById('filter-room');
+    filter.innerHTML = '<option value="">All</option>';
+    rooms.forEach(r => {
+      roomLookup[r.id] = r;
+      const o1 = document.createElement('option');
+      o1.value = r.id; o1.textContent = `${r.name} (${r.type})`;
+      select.appendChild(o1);
+      const o2 = document.createElement('option');
+      o2.value = r.id; o2.textContent = `${r.name} (${r.type})`;
+      filter.appendChild(o2);
+    });
+  }
+
+  async function loadBookings() {
+    const params = new URLSearchParams();
+    const d = document.getElementById('filter-date').value;
+    const r = document.getElementById('filter-room').value;
+    if (d) params.set('date', d);
+    if (r) params.set('room_id', r);
+    const res = await fetch('/api/bookings' + (params.toString() ? `?${params}` : ''));
+    const list = await res.json();
+    const tbody = document.querySelector('#bookings-table tbody');
+    tbody.innerHTML = '';
+    list.forEach(b => {
+      const s = new Date(b.start);
+      const e = new Date(b.end);
+      const tr = document.createElement('tr');
+      tr.innerHTML = `
+        <td>${roomLookup[b.room_id]?.name || b.room_id}</td>
+        <td>${s.toLocaleDateString()}</td>
+        <td>${s.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'})}</td>
+        <td>${e.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'})}</td>
+        <td>${b.name || ''}</td>
+        <td>${b.email || ''}</td>
+      `;
+      tbody.appendChild(tr);
+    });
+  }
+
+  async function submitBooking() {
+    const name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const roomId = parseInt(document.getElementById('room-select').value, 10);
+    const date = document.getElementById('date').value;
+    const start = document.getElementById('start-time').value;
+    const end = document.getElementById('end-time').value;
+    const msg = document.getElementById('message');
+    msg.textContent = ''; msg.className = '';
+
+    if (!name || !email || !roomId || !date || !start || !end) {
+      msg.textContent = 'Please fill out all fields.'; msg.className = 'error'; return;
+    }
+    const res = await fetch('/api/bookings', {
+      method: 'POST', headers: {'Content-Type':'application/json'},
+      body: JSON.stringify({ room_id: roomId, date, start_time: start, end_time: end, name, email })
+    });
+    if (res.status === 200) { msg.textContent = 'Booking successful!'; msg.className = 'success'; loadBookings(); }
+    else if (res.status === 409) { msg.textContent = 'That time slot is already booked.'; msg.className = 'error'; }
+    else { msg.textContent = await res.text(); msg.className = 'error'; }
+  }
+
+  document.getElementById('book-btn').addEventListener('click', submitBooking);
+  document.getElementById('apply-filters').addEventListener('click', loadBookings);
+  document.getElementById('clear-filters').addEventListener('click', () => {
+    document.getElementById('filter-date').value = '';
+    document.getElementById('filter-room').value = '';
+    loadBookings();
+  });
+
+  fillTimeDatalist();
+  loadRooms().then(loadBookings);
+</script>
 </body>
 </html>
