--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,17 @@
     button:hover { background: #0056b3; }
     .status { margin-top: 15px; min-height: 20px; color: #333; }
     .timepicker-dropdown select { margin-right: 4px; padding: 4px; }
+    .link-bar { text-align: center; margin-bottom: 16px; }
+    .link-bar a { margin: 0 8px; color: #007bff; text-decoration: none; }
+    .link-bar a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
   <h1>Book a Space</h1>
+  <div class="link-bar">
+    <!-- Navigation link to the availability page -->
+    <a href="availability.html">Check Availability</a>
+  </div>
   <div class="card">
     <div class="field">
       <label for="name">Full Name</label>
@@ -51,23 +58,34 @@
   </div>
 
   <script>
+    // Populate the list of spaces and auto-booking options
     async function populateSpaces() {
       try {
         const res = await fetch('/api/spaces');
         const spaces = await res.json();
         const select = document.getElementById('space');
         select.innerHTML = '';
+        // Auto-booking options
         const autoDesk = document.createElement('option');
-        autoDesk.value = 'auto-desk'; autoDesk.textContent = 'Auto book Desk'; select.appendChild(autoDesk);
+        autoDesk.value = 'auto-desk';
+        autoDesk.textContent = 'Auto book Desk';
+        select.appendChild(autoDesk);
         const autoOffice = document.createElement('option');
-        autoOffice.value = 'auto-office'; autoOffice.textContent = 'Auto book Office'; select.appendChild(autoOffice);
+        autoOffice.value = 'auto-office';
+        autoOffice.textContent = 'Auto book Office';
+        select.appendChild(autoOffice);
         spaces.forEach(space => {
           const opt = document.createElement('option');
-          opt.value = space.id; opt.textContent = space.name; select.appendChild(opt);
+          opt.value = space.id;
+          opt.textContent = space.name;
+          select.appendChild(opt);
         });
-      } catch (err) { console.error(err); }
+      } catch (err) {
+        console.error(err);
+      }
     }
 
+    // Convert 12h time string (e.g. "3:30 PM") to 24h format (HH:MM)
     function convertTo24h(str) {
       if (!str) return '';
       const parts = str.trim().split(' ');
@@ -80,6 +98,7 @@
       return `${hour.toString().padStart(2, '0')}:${minute}`;
     }
 
+    // Create a custom time picker that appears on focus
     function createTimePicker(inputId) {
       const input = document.getElementById(inputId);
       const container = document.createElement('div');
@@ -94,16 +113,37 @@
       const hourSelect = document.createElement('select');
       for (let i = 1; i <= 12; i++) {
         const opt = document.createElement('option');
-        opt.value = i < 10 ? '0' + i : '' + i; opt.textContent = opt.value; hourSelect.appendChild(opt);
+        opt.value = i < 10 ? '0' + i : '' + i;
+        opt.textContent = opt.value;
+        hourSelect.appendChild(opt);
       }
       const minuteSelect = document.createElement('select');
-      ['00', '15', '30', '45'].forEach(m => { const opt = document.createElement('option'); opt.value = m; opt.textContent = m; minuteSelect.appendChild(opt); });
+      ['00', '15', '30', '45'].forEach(m => {
+        const opt = document.createElement('option');
+        opt.value = m;
+        opt.textContent = m;
+        minuteSelect.appendChild(opt);
+      });
       const periodSelect = document.createElement('select');
-      ['AM', 'PM'].forEach(p => { const opt = document.createElement('option'); opt.value = p; opt.textContent = p; periodSelect.appendChild(opt); });
+      ['AM', 'PM'].forEach(p => {
+        const opt = document.createElement('option');
+        opt.value = p;
+        opt.textContent = p;
+        periodSelect.appendChild(opt);
+      });
       const setBtn = document.createElement('button');
-      setBtn.type = 'button'; setBtn.textContent = 'Set'; setBtn.style.marginLeft = '8px';
-      setBtn.onclick = () => { const value = `${hourSelect.value}:${minuteSelect.value} ${periodSelect.value}`; input.value = value; container.style.display = 'none'; };
-      container.appendChild(hourSelect); container.appendChild(minuteSelect); container.appendChild(periodSelect); container.appendChild(setBtn);
+      setBtn.type = 'button';
+      setBtn.textContent = 'Set';
+      setBtn.style.marginLeft = '8px';
+      setBtn.onclick = () => {
+        const value = `${hourSelect.value}:${minuteSelect.value} ${periodSelect.value}`;
+        input.value = value;
+        container.style.display = 'none';
+      };
+      container.appendChild(hourSelect);
+      container.appendChild(minuteSelect);
+      container.appendChild(periodSelect);
+      container.appendChild(setBtn);
       document.body.appendChild(container);
       input.addEventListener('focus', () => {
         const rect = input.getBoundingClientRect();
@@ -112,10 +152,13 @@
         container.style.display = 'block';
       });
       document.addEventListener('click', (e) => {
-        if (e.target !== input && !container.contains(e.target)) container.style.display = 'none';
+        if (e.target !== input && !container.contains(e.target)) {
+          container.style.display = 'none';
+        }
       });
     }
 
+    // Submit the booking form
     async function doBook() {
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
@@ -125,7 +168,10 @@
       const spaceVal = document.getElementById('space').value;
       const statusEl = document.getElementById('status');
       statusEl.style.color = '#333';
-      if (!name || !email || !date || !startRaw || !endRaw || !spaceVal) { statusEl.textContent = 'Please fill in all fields.'; return; }
+      if (!name || !email || !date || !startRaw || !endRaw || !spaceVal) {
+        statusEl.textContent = 'Please fill in all fields.';
+        return;
+      }
       const startTime = convertTo24h(startRaw);
       const endTime = convertTo24h(endRaw);
       try {
@@ -133,17 +179,36 @@
           const type = spaceVal === 'auto-desk' ? 'desk' : 'office';
           const params = new URLSearchParams({ type, date, start: startTime, end: endTime, name, email });
           const res = await fetch('/api/bookings/auto?' + params.toString());
-          if (res.ok) { const data = await res.json(); statusEl.style.color = 'green'; statusEl.textContent = `Success! Reserved ${data.spaceName} on ${date}.`; }
-          else { const err = await res.json(); statusEl.style.color = 'red'; statusEl.textContent = err.error || 'Auto-book failed.'; }
+          if (res.ok) {
+            const data = await res.json();
+            statusEl.style.color = 'green';
+            statusEl.textContent = `Success! Reserved ${data.spaceName} on ${date}.`;
+          } else {
+            const err = await res.json();
+            statusEl.style.color = 'red';
+            statusEl.textContent = err.error || 'Auto-book failed.';
+          }
         } else {
           const res = await fetch('/api/bookings', {
-            method: 'POST', headers: { 'Content-Type': 'application/json' },
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, spaceId: spaceVal, date, startTime, endTime, recurring: false })
           });
-          if (res.ok) { const data = await res.json(); statusEl.style.color = 'green'; statusEl.textContent = `Success! Your booking ID is ${data.id}.`; }
-          else { const err = await res.json(); statusEl.style.color = 'red'; statusEl.textContent = err.error || 'Booking failed.'; }
+          if (res.ok) {
+            const data = await res.json();
+            statusEl.style.color = 'green';
+            statusEl.textContent = `Success! Your booking ID is ${data.id}.`;
+          } else {
+            const err = await res.json();
+            statusEl.style.color = 'red';
+            statusEl.textContent = err.error || 'Booking failed.';
+          }
         }
-      } catch (err) { console.error(err); statusEl.style.color = 'red'; statusEl.textContent = 'An error occurred while booking.'; }
+      } catch (err) {
+        console.error(err);
+        statusEl.style.color = 'red';
+        statusEl.textContent = 'An error occurred while booking.';
+      }
     }
 
     document.addEventListener('DOMContentLoaded', () => {
